--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   <script src="JS/sweetalert.js"></script>
 </head>
 <body>
-
+<!-- 
   <div class="box-load">
     <div class="pre">Carregamento</div>
-  </div>
+  </div> -->
 
   <div class="content">
   <div class="div-main">
